


[package]
name = "bank_application"
version = "0.1.0"
edition = "2021"
authors = ["bblackyyyy"]
description = "project for bank application and gaining experience in Slint"
build = "build.rs"



[dependencies]

slint = "1.3"


[build-dependencies]
slint-build = "1.3"
winres = "0.1"

[package.metadata.bundle]
name = "bank_application"
version = "0.1.0"